--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: rgb(49, 87, 47);
+    background-color: rgb(55, 104, 52);
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -26,18 +26,38 @@ h1{
     color: white;
     margin-top: 50px;
     border: solid;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-bottom: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 p{
     color:white;
-    text-align: center;
+    text-align: justify;
     margin-top: 50px;
     margin-left: 200px;
     margin-right: 200px;
 }
 
+img{
+    max-width: 300px;
+    float: left;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 100px;
+}
+
+/*.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+}
+/* incorporate??^
+
+
 /*------tag for comments------*/ 
+/*------don't use origina size--------*/
+/*------three font families ----------*/
