--- a/css/styles.css
+++ b/css/styles.css
@@ -4,65 +4,75 @@
 }
 
 body{
-    background-color: rgb(55, 104, 52);
+    background-color: rgb(13, 255, 0);
     font-family:Arial, Helvetica, sans-serif;
 }
 
-
-header a{
-    background-color: rgb(33, 33, 54);
-    color: white;
-    padding: 20px;
+body {
+  min-height: 100vh;
+  background-color: rgb(255, 255, 255);
+  font-family: "Helvetica", Tahoma, Geneva, Verdana, sans-serif;
+}
+nav {
+  background-color: rgb(42, 25, 86);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+}
+nav ul {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-header{
-    background-color: rgb(33, 33, 54);
-    padding: 30px;
+nav li {
+  height: 50px;
+}
+nav a {
+  height: 100%;
+  padding: 0 30px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+
+nav li #active{
+  background-color:orange;
+  color:red;
+}
+
+/* The code below styles the LOGO link */
+
+nav li:first-child {
+  margin-right: auto;
+}
+nav li:first-child a {
+  color: #fff;
+  font-weight: 800;
 }
 
 
-h1{
-    text-align: center;
-    color: white;
-    margin-top: 50px;
-    border: solid;
-    margin-left: 400px;
-    margin-right: 400px;
-    margin-bottom: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+/*columns */
+.about{
+    width: 100px;
 }
-
-p{
-    color:white;
-    text-align: justify;
-    margin-top: 50px;
-    margin-left: 200px;
-    margin-right: 200px;
-}
-
-img{
-    max-width: 300px;
-    float: left;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
-}
-
-hr{
-    margin-top: 50px;
-    margin-right: 200px;
-}
-
-/*.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 25px;
-}
-/* incorporate??^
-
-
-/*------tag for comments------*/ 
-/*------don't use origina size--------*/
-/*------three font families ----------*/
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 6px;
+    grid-row-gap: 6px;
+  }
+  
+  .parent{
+    min-height:200px;
+  /*   padding:10px; */
+  }
+  .column1{
+    grid-area: 1 / 1 / 3 / 4;
+  }
+  .column2{
+    grid-area: 1 / 4 / 3 / 6;
+      background-color: orange;
+  }
