--- a/css/styles.css
+++ b/css/styles.css
@@ -4,18 +4,15 @@
 }
 
 body{
-    background-color: rgb(13, 255, 0);
+    background-color:rgb(50, 115, 135);
     font-family:Arial, Helvetica, sans-serif;
 }
 
-body {
-  min-height: 100vh;
-  background-color: rgb(255, 255, 255);
-  font-family: "Helvetica", Tahoma, Geneva, Verdana, sans-serif;
-}
+/* NAV */
 nav {
   background-color: rgb(42, 25, 86);
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  position: sticky;
 }
 nav ul {
   width: 100%;
@@ -52,27 +49,53 @@ nav li:first-child a {
   font-weight: 800;
 }
 
-
-/*columns */
-.about{
-    width: 100px;
-}
-.parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 6px;
-    grid-row-gap: 6px;
-  }
   
+/* COLUMNS */
   .parent{
     min-height:200px;
-  /*   padding:10px; */
   }
   .column1{
     grid-area: 1 / 1 / 3 / 4;
+    margin-top: 25px;
+    margin-right: 50px;
   }
   .column2{
     grid-area: 1 / 4 / 3 / 6;
-      background-color: orange;
+    margin-top: 25px;
+    margin-right: 25px;
   }
+
+/*IMAGE*/
+
+.intro{
+    width: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+ }
+.album{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    object-position: 80% 100%;
+    float: right;
+  }
+.Book3{
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
+    object-position: 50% 100%;
+    float: right;
+  }
+
+/* Text */
+h1{
+    margin-bottom: 100px;
+    margin-top: 100px;
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+    margin: 50px;
+}
