--- a/css/styles.css
+++ b/css/styles.css
@@ -130,21 +130,6 @@ nav li:first-child a {
     margin-left: 50px;
   }
 
-  .drawingimgs{
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  }
-
-  .sidebysideimgs {
-    display: flex;
-  }
-  
-  .drawingimgs1 {
-    flex: 33.33%;
-    padding: 5px;
-  }
 
   /* add later 
 .Book2{
@@ -176,6 +161,11 @@ nav li:first-child a {
   margin-right: 50px;
   font-size: xx-large;
 }
+h1{
+  text-align: center;
+  margin: 50px;
+  color: white;
+}
 
 h2{
     text-align: center;
@@ -204,7 +194,11 @@ h2{
 }
 
 .drawingtext{
+  margin-left: 100px;
   margin-bottom: 100px;
+  margin-right: 100px;
+  text-align: center;
+  color: white;
 }
 
 h3{
@@ -223,4 +217,6 @@ h3{
   color: white;
   font-family:Georgia, 'Times New Roman', Times, serif
 }
+
+/*ask about how to center the list*/
 /* Miscellaneous */
