--- a/css/styles.css
+++ b/css/styles.css
@@ -153,12 +153,12 @@ nav li:first-child a {
 
 .GD{
   margin-bottom: 10px;
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
   color: white;
   margin-left: 50px;
   margin-right: 50px;
-  font-size: xx-large;
+  font-size: x-large;
 }
 h1{
   text-align: center;
