--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,23 @@ nav li:first-child a {
   margin-bottom: 25px;
 }
 
+/*Drawing Columns*/
+.drawingparent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0px;
+}
+
+.drawingcolumn1 {
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+.drawingcolumn2 {
+  margin-top: 25px;
+  margin-right: 50px;
+  margin-bottom: 25px;
+}
 /*IMAGE*/
 
 /*Home Page CSS*/
@@ -207,20 +224,6 @@ h2{
 
 /*Drawing CSS*/
 
-.drawingimgs1{
-  margin-top: 25px;
-  margin-left: 150px;
-  margin-right: 100px;
-}
-
-.drawingtext{
-  margin-left: 150px;
-  margin-bottom: 100px;
-  margin-right: 150px;
-  text-align: center;
-  color: rgb(93, 90, 90);
-}
-
 .drawingtext2{
   margin-left: 150px;
   margin-bottom: 100px;
@@ -229,6 +232,30 @@ h2{
   color: rgb(93, 90, 90);
 }
 
+.drawing1{
+object-fit: cover;
+object-position: 25% 50%;
+border-radius: 20px;
+margin-right: 10px;
+}
+
+.drawing2{
+  object-fit: cover;
+  object-position: 80% 100%;
+  border-radius: 20px;
+}
+.drawing3{
+  object-fit: cover;
+  object-position: 25% 50%;
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
+.drawing4{
+  object-fit: cover;
+  object-position: 80% 100%;
+  border-radius: 20px;
+  }
 /*Photography CSS*/
 
 .photographyimg{
