--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,22 @@ margin-right: 10px;
   object-fit: cover;
   object-position: 80% 100%;
   border-radius: 20px;
-  }
+}
+
+#otherdrawings{
+    margin-top: 50px;
+}
+
+.slicetrio{
+  margin-left: 0px;
+  padding: 10px;
+}
+
+.stilllife2, .sketch, .tree{
+  padding: 10px;
+  border-radius: 20px;
+}
+
 /*Photography CSS*/
 
 .photographyimg{
