--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,6 @@ nav li #active{
   color:red;
 }
 
-/* The code below styles the LOGO link */
-
 nav li:first-child {
   margin-right: auto;
 }
@@ -96,7 +94,25 @@ nav li:first-child a {
   margin-right: 50px;
   margin-bottom: 25px;
 }
-/*IMAGE*/
+
+/*Photography Columns*/
+
+.photographycontainer{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0px;
+}
+
+.photographycolumn1 {
+  margin-top: 25px;
+  margin-left: 50px;
+}
+
+.photographycolumn2 {
+  margin-top: 25px;
+  margin-right: 50px;
+  margin-bottom: 25px;
+}
 
 /*Home Page CSS*/
 .Introduction{
@@ -109,7 +125,6 @@ nav li:first-child a {
   font-size: 100px;
   font-family: Georgia, 'Times New Roman', Times, serif
 }
-
 
 /*About Me CSS*/
 
@@ -143,6 +158,10 @@ nav li:first-child a {
   font-family: "PT Serif", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.VidLink{
+  text-decoration: none;
 }
 
 h3{
@@ -273,17 +292,53 @@ margin-right: 10px;
 
 /*Photography CSS*/
 
-.photographyimg{
-  margin-left: 40px;
-  margin-top: 25px; 
-}
-.photographytext{
-  margin-left: 100px;
-  margin-bottom: 100px;
-  margin-right: 100px;
-  margin-top: 50px;
-  text-align: center;
+.photographytext1{
   color: rgb(93, 90, 90);
+  padding: 10px;
+  margin-left: 50px;
+  margin-right: 100px;
+  margin-bottom: 75px;
+}
+
+.photographytrio{
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  margin-bottom: 50px;
+}
+
+.photographytrio img{
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.photographytrio3 {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.photographytrio3 img {
+  padding: 0px;
+  border-radius: 10px;
+  max-height: 400px;
+  margin: 0 10px;
+}
+
+.milebeach{
+  object-fit: cover;
+  object-position: 25% 15%;
+  border-radius: 20px;
+  margin-left: 25px;
+}
+
+.goldenbridge{
+  object-fit: cover;
+  object-position: 10% 100%;
+  border-radius: 20px;
+  float: left;
+  margin-right: 20px;
 }
 
 /* CSS ON ALL PAGES */
@@ -296,10 +351,6 @@ h1{
 
 
 /* Miscellaneous */
-
-.VidLink{
-  text-decoration: none;
-}
 
 .pt-serif-regular {
   font-family: "PT Serif", serif;
