--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,8 @@ h3{
   margin-right: 20px;
 }
 
-.slicetrio{
-  margin-left: 0px;
+.designtrio{
+  margin-left: 65px;
   padding: 10px;
   margin-bottom: 50px;  
 }
@@ -282,7 +282,7 @@ margin-right: 10px;
 }
 
 .drawingtrio{
-  margin-left: 0px;
+  margin-left: 65px;
   padding: 10px;
   margin-bottom: 50px;
 }
